public class Person {
    private final String name;
    private final String surname;
    private final String address;

    public Person(String john, String doe, String s) {
        this.name = john;
        this.surname = doe;
        this.address = s;
    }
}
