@startuml
class Person {
}
class Appointment {
~ Person owner
~ Pet pet
~ String date
~ String time
~ String reason
}
class VeterinaryClinic {
~ List<Appointment> appointments
+ void addAppointment(Appointment)
+ void listAppointments()
}
class Dog {
}

class Cat {
}
class Pet {
~ String name
~ String color
~ int age
}


Pet <|-- Dog
Pet <|-- Cat

VeterinaryClinic "1.*" o-- "*" Appointment

Appointment --> Person : usa
Appointment --> Pet : usa


@enduml